# MSPipe

./: .gitignore  CMakeLists.txt  README.md  environment.yaml  lei.sh  lei_script.sh  lei_tgn.sh  pyproject.toml  requirements.txt  setup.py  简化mu
gnnflow/: config.py  data.py  dygformer_sampler.py  dynamic_graph.py  utils.py
gnnflow/cache/: cache.py  gnnlab_static_cache.py
gnnflow/csrc/: api.cc  common.h  dynamic_graph.cu  temporal_block_allocator.cu  temporal_block_allocator.h
gnnflow/distributed/: dispatcher.py
gnnflow/models/: __init__.py  dgnn.py  dygformer.py
gnnflow/models/modules/: layers.py  memory_updater.py  time_encoder.py
scripts/: offline_edge_prediction.py  offline_edge_prediction_pipethread.py  offline_edge_prediction_presample.py  pipeline.py  pipeline_distributed.py  setup_native_deps.sh  train.py
tests/: test_build_graph.py  test_dynamic_graph.py  test_model.py  test_temporal_sampler.py
tgl/: offline_tgl_presample.py  utils.py
